--- a/src/main.css
+++ b/src/main.css
@@ -4,12 +4,8 @@
 @import 'form';
 @import 'misc';
 
-* {
-  box-sizing: border-box;
-}
-
 *, *:before, *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
